# cmake_stm32f407vet6

./: .mxproject  CMakeLists.txt  cmake_stm32f407vet6.ioc  config_pkg.cmake
Core/Inc/: main.h
Core/Src/: main.c  stm32f4xx_hal_msp.c
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
user/: CMakeLists.txt
user/inc/: atgm336h.hpp  callback.hpp  common.hpp  esp8266.hpp  serialport.hpp  start_main.hpp
user/src/: atgm336h.cpp  callback.cpp  esp8266.cpp  serialport.cpp  start_main.cpp
